@@ -196,6 +196,19 @@ DBUser=root
 # Default:
 # HousekeepingFrequency=1
 
+### Option: MaxHousekeeperDelete
+#	The table "housekeeper" contains "tasks" for housekeeping procedure in the format:
+#	[housekeeperid],[tablename], [field], [value].
+#	No more than 'MaxHousekeeperDelete' rows (corresponding to [tablename], [field], [value])
+#	will be deleted per one task in one housekeeping cycle.
+#	SQLite3 does not use this parameter, deletes all corresponding rows without a limit.
+#	If set to 0 then no limit is used at all. In this case you must know what you are doing!
+#
+# Mandatory: no
+# Range: 0-1048576
+# Default:
+# MaxHousekeeperDelete=500
+
 ### Option: DisableHousekeeping
 #	If set to 1, disables housekeeping.
 #
